--- a/camera_layer/Cargo.toml
+++ b/camera_layer/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 authors = ["Sascha <sascha.zenglein@stud.tu-darmstadt.de>"]
 
 [dependencies]
+# image is just used for convenience. Actual jpeg handling is done by mozjpeg for speed.
+image = "0.19.0"
+gphoto2-sys = "0.1.2"
+libc = "0.2.40"
+mozjpeg-sys = "0.5.13"
