--- a/photobooth/Cargo.toml
+++ b/photobooth/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.1.0"
 authors = ["Sascha <sascha.zenglein@stud.tu-darmstadt.de>"]
 
 [dependencies]
+
+
+image = "0.19.0"
+gphoto2-sys = "0.1.2"
+libc = "0.2.40"
+mozjpeg-sys = "0.5.13"
