--- a/photobooth/Cargo.toml
+++ b/photobooth/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 authors = ["Sascha <sascha.zenglein@stud.tu-darmstadt.de>"]
 
 [dependencies]
-
+ggez = "0.4.2"
+ggez-goodies = "0.1.0"
 
 gphoto2-sys = "0.1.2"
 libc = "0.2.40"
